# codex-operator

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHECKLIST_CONCLUSAO.md  CHECKLIST_GO_LIVE.md  COMO_COMECAR.md  COMPLIANCE_DELIVERY_SUMMARY.md  COMPONENT_STATUS_MATRIX.md  CRM_SETUP_CHECKLIST.md  CUSTOMIZATION_VALUES.md  DEPLOY_CHECKLIST.md  DEPLOY_LANDING_GUIDE.md  Dockerfile  EMAIL_SENDING_CHECKLIST.md  EXECUTION_SUMMARY_DEC3.md  GO_LIVE_STATUS.md  NETLIFY_DEPLOYMENT_READY.md  OUTREACH_STRATEGY.md  OUTREACH_TARGETS_DEC4.md  OUTREACH_WAVE2_PREP.md  PLACEHOLDERS_REPORT.csv  PLANO_EXECUCAO_PARALELO.md  PROPOSTA_MEI.md  QUICKSTART.md  QUICKSTART_AMANHA.md  README.md  README_CUSTOMIZACAO.md  README_DEV.md  README_RUN_EMAILS.md  REFERENCIAS_CUSTOMIZACAO.md  RELEASE.md  RESUMO_EXECUCAO_HOJE.md  RESUMO_EXECUCAO_v1.0.md  RESUMO_EXECUTIVO.md  RESUMO_SAGA_v1.1.md  ROADMAP_AGENCIA.md  SETUP_GMAIL_PESSOAL.md  SETUP_NETLIFY_CRM.md  (+22 more)
DOCUMENTOS_FINALIZADOS/: DEPLOY_STANDARDS.md  GO_LIVE_CHECKLIST.md  INCIDENT_RESPONSE_PLAYBOOK.md  MONITORING_ALERTING_RUNBOOK.md  SECURITY_COMPLIANCE_MATRIX.md
backend/: main.py
config/: sa-key.template.json  sites.yaml
deploy-temp/: index.html  thanks.html
docs/: ACTION_ITEMS_CONSOLIDATED_PT-BR.md  API_SECRETS_CHECKLIST_COMPLETE.md  API_SECRETS_INTEGRATION_COMPLETE.md  BENCHMARKS.md  CIRCUIT_BREAKER.md  CONTRATO_TRIAL.md  DASHBOARD_KPI.md  DEMO_SCRIPT.txt  DEPLOY_STANDARDS.md  EMAIL_INTEGRATION.md  ENTREGA_FINAL.md  EXECUTE_DEPLOYMENT_PT-BR.md  GMAIL_INTEGRATION.md  GOOGLE_INTEGRATION.md  GO_LIVE_CHECKLIST.md  (+19 more)
(+85 files in other folders)
