[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-operator"
version = "0.0.0"
description = "Automation agent framework 'Codex Operator'"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Charles Rodrigues" } ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
